# mcpartools

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.md  README.rst  install_deps.sh  main.spec  make_single_executable.sh  pyproject.toml  setup.cfg  setup.py  tox.ini  wercker.yml
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/workflows/: ci.yml  docs.yml  pr-automation.yml  release.yml  welcome-contributor.yml
.travis/: deploy_package.sh  install_linux.sh
docs/: authors.rst  badges_links.rst  conf.py  contributing.rst  developer.rst  getting_started.rst  index.rst  install.rst  technical.rst  user_guide.rst
examples/: SOURCE_SOBP.F  source_sobp.f
fluka/: slurm_options.sh
mcpartools/: __init__.py  _version.py  generatemc.py  generator.py  run_mcpartools.py
mcpartools/mcengine/: common.py  fluka.py  mcengine.py  shieldhit.py
mcpartools/mcengine/data/: ICRU_table  ICRU_table.json  SH12A_ICRU_numbers.json  SH12A_ICRU_table.json  collect.sh  collect_fluka.sh  collect_shieldhit.sh  dump_function_fluka.sh  dump_function_shieldhit.sh  regression.ini  run_fluka.sh  run_shieldhit.sh
mcpartools/scheduler/: base.py  common.py  slurm.py  torque.py
mcpartools/scheduler/data/: dump_slurm.sh  dump_torque.sh  kill_slurm.sh  kill_torque.sh  merge_logs.sh  merge_logs_slurm.sh  merge_logs_torque.sh  run_slurm.sh  run_torque.sh  smart_submit_slurm.sh.j2  status.sh  submit_slurm.sh  submit_torque.sh
mcpartools/scheduler/smart/: classes.py  slurm.py
tests/: requirements-test.txt  test_generatemc.py  test_mcpartools.py
tests/manual/: check.sh  generate.sh  submit.sh
tests/res/: sample_fluka.inp
tests/scheduler/smart/: test_slurm.py
